# opa_django_example

./: docker-compose.yml  policy.rego  pyproject.toml
backend/apps/company/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/apps/company/migrations/: 0001_initial.py  0002_alter_team_access_tags.py
backend/apps/product/: models.py
backend/apps/product/migrations/: 0001_initial.py
backend/apps/products/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/products/migrations/: 0001_initial.py
backend/apps/users/: models.py  signals.py  urls.py
backend/apps/users/migrations/: 0001_initial.py  0002_alter_myuser_group.py  0002_alter_user_subscriptions.py
backend/config/: settings.py  urls.py
backend/utils/: opa.py  subscription_consts.py
policies/: company.rego  employee_create.rego  group_create.rego  hello.rego  opa.yaml  rbac.rego
